Fix dark mode social btn CSS

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -758,7 +758,3 @@ a.bmc-btn:hover {
 		padding-left: 2.8rem !important;
 	}
 }
-
-a.social-btn, a.social-btn:hover {
-	color: white;
-}
